--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
   ></script>
 
   <body>
+    <span class="logo">QFLIX</span>
     <div class="menu">
-      <span class="logo">QFLIX</span>
-
       <span id="home">Home</span>
       <span>TV Shows</span>
       <span>Movies</span>
@@ -29,7 +28,7 @@
     </div>
 
     <!-- main page papop-->
-    <div class="main">
+    <div class="main papop">
       <div class="mainPoster">
         <img class="mainImage" src="source/IMG_0871.jpeg" />
       </div>
@@ -44,8 +43,8 @@
         <div class="textBox">
           <span class="text">
             오래묵은 나무에 밝은 새가 깃들고, 맑은 우물에 어린 칠성이 머물고,
-            바람 한 줌 흙 한 모금에도 하늘이 실리는 땅 한반도— 크고 작은
-            나라들의 제국, 신화와 마법의 대한민국으로 당신을 초대합니다.</span
+            바람 한 줌 흙 한 모금에도 하늘이 실리는 땅, 크고 작은 나라들의 제국,
+            신화와 마법의 대한민국으로 당신을 초대합니다.</span
           >
         </div>
         <div class="btnBox" style="display: flex">
@@ -59,7 +58,7 @@
 
     <!-- 회차 페이지 -->
 
-    <div class="playPage papop">
+    <div class="playPage">
       <div class="playImg">
         <div class="playPoster">
           <img class="playImage" src="source/IMG_0870.png" />
