--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <!-- main page papop-->
-    <div class="main papop">
+    <div class="main">
       <div class="mainPoster">
         <img class="mainImage" src="source/IMG_0871.jpeg" />
       </div>
@@ -58,7 +58,7 @@
 
     <!-- 회차 페이지 -->
 
-    <div class="playPage">
+    <div class="playPage papop">
       <div class="playImg">
         <div class="playPoster">
           <img class="playImage" src="source/IMG_0870.png" />
