--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="thumbList">
           <div class="set">
             <div class="thumbImgBox">
-              <img class="thumbImg" src="source/style.jpeg" />
+              <img class="thumbImg" src="source/1.png" />
               <span class="thumbTitle">1. no.1 - 사신의 신부</span>
               <i class="fa-solid fa-circle-down"></i>
             </div>
@@ -94,7 +94,7 @@
 
           <div class="set">
             <div class="thumbImgBox">
-              <img class="thumbImg" src="source/style.jpeg" />
+              <img class="thumbImg" src="source/2.jpeg" />
               <span class="thumbTitle">1. no.2 - 오피스 테헤란</span>
               <i class="fa-solid fa-circle-down"></i>
             </div>
@@ -112,7 +112,7 @@
 
           <div class="set">
             <div class="thumbImgBox">
-              <img class="thumbImg" src="source/style.jpeg" />
+              <img class="thumbImg" src="source/3.jpg" />
               <span class="thumbTitle">1. no.3 - 용의 나라</span>
               <i class="fa-solid fa-circle-down"></i>
             </div>
@@ -130,7 +130,7 @@
 
           <div class="set">
             <div class="thumbImgBox">
-              <img class="thumbImg" src="source/style.jpeg" />
+              <img class="thumbImg" src="source/4.jpeg" />
               <span class="thumbTitle">1. no.4 - 은장애기 본풀이</span>
               <i class="fa-solid fa-circle-down"></i>
             </div>
@@ -148,7 +148,7 @@
 
           <div class="set">
             <div class="thumbImgBox">
-              <img class="thumbImg" src="source/style.jpeg" />
+              <img class="thumbImg" src="source/5.jpeg" />
               <span class="thumbTitle">1. no.5 -호밀밭의 서리꾼</span>
               <i class="fa-solid fa-circle-down"></i>
             </div>
@@ -166,7 +166,7 @@
 
           <div class="set">
             <div class="thumbImgBox">
-              <img class="thumbImg" src="source/style.jpeg" />
+              <img class="thumbImg" src="source/6.png" />
               <span class="thumbTitle">1. no.6 - 서울의 영혼</span>
               <i class="fa-solid fa-circle-down"></i>
             </div>
